test git reset command

--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
     <title>Hello</title>
   </head>
   <body>
+      test git reset
       <h1 style="color:blue;">hello how are you<h1>
   </body>
 </html>
